syntax = "proto3";

package transaction;

import "google/protobuf/timestamp.proto";
option go_package = "pkg/transactionpb";

message Transaction {
  int64 id = 1;
  int64 account_id = 2;
  string description = 3;
  double amount = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message CreateTransactionRequest {
  int64 account_id = 1;
  string description = 2;
  double amount = 3;
}

message CreateTransactionResponse {
  int64 transaction_id = 1;
}

message GetTransactionByIDRequest {
  int64 transaction_id = 1;
}

message GetTransactionByIDResponse {
  Transaction transaction = 1;
}

message GetTransactionsByAccountIDRequest {
  int64 account_id = 1;
}

message GetTransactionsByAccountIDResponse {
  repeated Transaction transactions = 1;
}

service TransactionService {
  rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse);
  rpc GetTransactionByID(GetTransactionByIDRequest) returns (GetTransactionByIDResponse);
  rpc GetTransactionsByAccountID(GetTransactionsByAccountIDRequest) returns (GetTransactionsByAccountIDResponse);
}
